tests/ui/did_you_mean/recursion_limit_macro.stderr
error: recursion limit reached while expanding `recurse!`
  --> $DIR/recursion_limit_macro.rs:10:31
   |
LL | / macro_rules! recurse {
LL | |     () => { };
LL | |     ($t:tt $($tail:tt)*) => { recurse!($($tail)*) };
   | |                               ^^^^^^^^^^^^^^^^^^^ in this macro invocation (#2)
LL | | }
   | | -
   | | |
   | |_in this expansion of `recurse!` (#1)
   |   in this expansion of `recurse!` (#2)
...
LL |       recurse!(0 1 2 3 4 5 6 7 8 9 0 1 2 3 4 5 6 7 8 9);
   |       ------------------------------------------------- in this macro invocation (#1)
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "20"]` attribute to your crate (`recursion_limit_macro`)

error: aborting due to previous error

